--- a/app/views/tournaments/_tournaments_search.html.erb
+++ b/app/views/tournaments/_tournaments_search.html.erb
@@ -1,4 +1,4 @@
-<tr><td colspan="12"><%= will_paginate @tournaments, {:class => 'pagination'} %></td></tr>
+<tr><td colspan="12"><%= will_paginate @tournaments, {:param_name => 'tournaments', :class => 'pagination'} %></td></tr>
 <% @tournaments.each do |tournament| %>
   <% master = master_tournament(tournament) %>
   <tr>
@@ -11,4 +11,4 @@
     <td colspan="1"><%= tournament.status %></td>
   </tr>
 <% end %>
-<tr><td colspan="12"><%= will_paginate @tournaments, {:class => 'pagination'} %></td></tr>
+<tr><td colspan="12"><%= will_paginate @tournaments, {:param_name => 'tournaments', :class => 'pagination'} %></td></tr>
