--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,6 @@
   </div>
   
   <p>
-    <%= link_to "Twitterで登録する", "/auth/twitter", method: :post, class: "btn btn-primary" %>
+    <%= link_to image_tag("login_by_twitter.png", class: "img-fluid rounded") + " ログイン", "/auth/twitter", method: :post, class: "btn btn-primary" %>
   </p>
 </div>
