--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -2,4 +2,6 @@
   $('#mails-inbox').html('<%= escape_javascript( render 'messages/inbox') %>');
 <% elsif params[:outbox_page].present? || params[:outbox].present? %>
   $('#mails-outbox').html('<%= escape_javascript( render 'messages/outbox') %>');
+<% elsif params[:tournaments].present? %>
+  $('#tournaments_search_result').html('<%= escape_javascript( render 'tournaments/tournaments_search') %>')
 <% end %>
