--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
   <table class="table text-nowrap table-hover" id="table-users">
     <thead>
       <tr>
-        <th class="" style="width:20%;"><%= User.human_attribute_name :name %></th>
+        <th style="width:20%;"><%= User.human_attribute_name :name %></th>
         <th style="width:70%;"><%= User.human_attribute_name :description %></th>
         <th style="width:10%;"></th>
       </tr>
@@ -27,11 +27,7 @@
     <% @users.each do |user| %>
       <tr>
         <td style="width:20%;">
-          <% if user.image? %>
-            <%= image_tag user.image.to_s, class: "img-fluid img-thumbnail rounded", :style => "max-width:100px;"  %>
-          <% else %>
-            <%= image_tag "no-profile-image.png", class: "img-fluid img-thumbnail rounded", :style => "max-width:100px;" %>
-          <% end %>
+          <%= image_tag user.image.to_s, class: "img-fluid img-thumbnail rounded", :style => "max-width:100px;" %>
           <%= link_to user.name, user, class: "text-reset font-weight-bold text-nowrap" %>
         </td>
         <td style="width:70%;"><p class="d-inline-block text-truncate" style="max-width:540px"><%= user.description %></p></td>
