--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -1,100 +1,100 @@
 <% provide(:title, @tournament.name) %>
 <div>
   <% if logged_in? %>
-  <section class="my-2">
-    <div class="accordion border" id="accordion" role="tablist" aria-multiselectable="true">
-      <% unless @started %>
-        <div class="card">
-          <div class="card-header" role="tab" id="headingOne">
-            <h5 class="mb-0">
-              <a class="text-body" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne">
-                <button type="button" class="btn btn-primary">
-                  <% if master?(@tournament) %>
-                    参加者を追加する
-                  <% else %>
-                    大会に参加する
+  <% if master?(@tournament) == false && Participant.find_by(tournament_id: @tournament.id, user_id: current_user.id).nil? %>
+    <section class="my-2">
+      <div class="accordion border" id="accordion" role="tablist" aria-multiselectable="true">
+        <% unless @started %>
+          <div class="card">
+            <div class="card-header" role="tab" id="headingOne">
+              <h5 class="mb-0">
+                <a class="text-body" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne">
+                  <button type="button" class="btn btn-primary">
+                    <% if master?(@tournament) %>
+                      参加者を追加する
+                    <% else %>
+                      大会に参加する
+                    <% end %>
+                  </button>
+                </a>
+              </h5>
+            </div><!-- /.card-header -->
+            <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+              <div class="card-body">
+                <% if master?(@tournament) #開催者用追加フォーム %>
+                  <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
+                    <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), multiple: true, class: "form-control searchable" %>
+                    <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
                   <% end %>
-                </button>
-              </a>
-            </h5>
-          </div><!-- /.card-header -->
-          <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-            <div class="card-body">
-              <% if master?(@tournament) #開催者用追加フォーム %>
-                <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
-                  <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), multiple: true, class: "form-control searchable" %>
-                  <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
-                <% end %>
-              <% else #参加者用追加フォーム %>
-                <% unless Participant.find_by(tournament_id: @tournament.id, user_id: current_user.id) %>
+                <% else #参加者用追加フォーム %>
                   <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
                     <%= hidden_field_tag :players, current_user.id %>
                     <%= f.submit "この大会に参加する", data: { confirm: "大会に参加しますか？" }, class: "btn btn-primary btn-block btn-login" %>
                   <% end %>
                 <% end %>
-              <% end %>
-            </div><!-- /.card-body -->
-          </div><!-- /.collapse -->
-        </div><!-- /.card -->
-      <% end %>
-      <% if master?(@tournament) %>
-        <div class="card">
-          <div class="card-header" role="tab" id="headingTwo">
-            <h5 class="mb-0">
-              <a class="collapsed text-body" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
-                <button type="button" class="btn btn-primary">一括送信</button>
-              </a>
-            </h5>
-          </div><!-- /.card-header -->
-          <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
-            <div class="card-body">
-              <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
-            
-                <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
-                <%= hidden_field_tag :tournament_id, @tournament.id %>
-                
-                <%= f.label "宛先" %>
-                <%= select_tag :user_to, options_from_collection_for_select(return_users_from_participants(@participants), :id, :name), include_blank: true, multiple: true, class: "form-control searchable"%>
-            
-                <%= f.label "本文" %>
-                <%= f.text_area :text, class: "form-control" %>
-                
-                <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
-              <% end %>
-            </div><!-- /.card-body -->
-          </div><!-- /.collapse -->
-        </div><!-- /.card -->
-        
-        <div class="card">
-          <div class="card-header" role="tab" id="headingThree">
-            <h5 class="mb-0">
-              <a class="collapsed text-body" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">
-                <button type="button" class="btn btn-primary">大会メニュー</button>
-              </a>
-            </h5>
-          </div><!-- /.card-header -->
-          <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
-            <div class="card-body">
-              <div class="row justify-content-around">
-                  <%= link_to "大会を編集する", edit_tournament_path(@tournament, @challonge), class: "btn btn-lg btn-success" %>
-                <% unless @started %>
-                  <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-primary" %>
-                  <%= link_to "参加者を並び替る", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-success" %>
-                  <%= link_to "大会を始める", tournament_start_path(@tournament), method: :get, data: { confirm: "大会を始めてもいいですか？" }, class: "btn btn-lg btn-success" %>
-                <% else %>
-                  <%= link_to "大会をやり直す", tournament_reset_path(@tournament), method: :get, data: { confirm: "大会をやり直してもいいですか？" }, class: "btn btn-lg btn-success" %>
-                  <% if @matches_opening.blank? && @challonge["tournament"]["state"] == "underway" %>
-                    <%= link_to "大会を終了する", tournament_finalize_path(@tournament), method: :get, data: { confirm: "大会を終了させてもいいですか？" }, class: "btn btn-lg btn-success" %>
-                  <% end %>
+              </div><!-- /.card-body -->
+            </div><!-- /.collapse -->
+          </div><!-- /.card -->
+        <% end %>
+        <% if master?(@tournament) %>
+          <div class="card">
+            <div class="card-header" role="tab" id="headingTwo">
+              <h5 class="mb-0">
+                <a class="collapsed text-body" data-toggle="collapse" href="#collapseTwo" role="button" aria-expanded="false" aria-controls="collapseTwo">
+                  <button type="button" class="btn btn-primary">一括送信</button>
+                </a>
+              </h5>
+            </div><!-- /.card-header -->
+            <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
+              <div class="card-body">
+                <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
+              
+                  <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
+                  <%= hidden_field_tag :tournament_id, @tournament.id %>
+                  
+                  <%= f.label "宛先" %>
+                  <%= select_tag :user_to, options_from_collection_for_select(return_users_from_participants(@participants), :id, :name), include_blank: true, multiple: true, class: "form-control searchable"%>
+              
+                  <%= f.label "本文" %>
+                  <%= f.text_area :text, class: "form-control" %>
+                  
+                  <%= f.submit "メッセージを送信する", class: "btn btn-primary btn-block btn-login" %>
                 <% end %>
-                <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary" %>
-              </div>
-            </div><!-- /.card-body -->
-          </div><!-- /.collapse -->
-        </div><!-- /.card -->
-      <% end %>
-    </div><!-- /#accordion -->
-  </section>
+              </div><!-- /.card-body -->
+            </div><!-- /.collapse -->
+          </div><!-- /.card -->
+          
+          <div class="card">
+            <div class="card-header" role="tab" id="headingThree">
+              <h5 class="mb-0">
+                <a class="collapsed text-body" data-toggle="collapse" href="#collapseThree" role="button" aria-expanded="false" aria-controls="collapseThree">
+                  <button type="button" class="btn btn-primary">大会メニュー</button>
+                </a>
+              </h5>
+            </div><!-- /.card-header -->
+            <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
+              <div class="card-body">
+                <div class="row justify-content-around">
+                    <%= link_to "大会を編集する", edit_tournament_path(@tournament, @challonge), class: "btn btn-lg btn-success" %>
+                  <% unless @started %>
+                    <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-primary" %>
+                    <%= link_to "参加者を並び替る", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-success" %>
+                    <%= link_to "大会を始める", tournament_start_path(@tournament), method: :get, data: { confirm: "大会を始めてもいいですか？" }, class: "btn btn-lg btn-success" %>
+                  <% else %>
+                    <%= link_to "大会をやり直す", tournament_reset_path(@tournament), method: :get, data: { confirm: "大会をやり直してもいいですか？" }, class: "btn btn-lg btn-success" %>
+                    <% if @matches_opening.blank? && @challonge["tournament"]["state"] == "underway" %>
+                      <%= link_to "大会を終了する", tournament_finalize_path(@tournament), method: :get, data: { confirm: "大会を終了させてもいいですか？" }, class: "btn btn-lg btn-success" %>
+                    <% end %>
+                  <% end %>
+                  <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary" %>
+                </div>
+              </div><!-- /.card-body -->
+            </div><!-- /.collapse -->
+          </div><!-- /.card -->
+        <% end %>
+      </div><!-- /#accordion -->
+    </section>
+  <% end %>
   <% end %><!-- logged_in? -->
   
   <h1><%= @tournament.name %></h1>
@@ -184,7 +184,7 @@
                 <% end %>
               </div>
               <div class="col-5">
-                <% if logged_in? %>
+                <% if master?(@tournament) %>
                   <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
                     <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
                     <%= hidden_field_tag :user_to, participant.user_id %>
