--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'All Users') %>
+<% provide(:title, 'ユーザ一覧') %>
 <% if params[:search].blank? %>
   <h1>ユーザー一覧</h1>
 <% else %>
@@ -17,8 +17,8 @@
   <table class="table text-nowrap table-hover" id="table-users">
     <thead>
       <tr>
-        <th style="width:20%;"><%= User.human_attribute_name :name %></th>
-        <th style="width:70%;"><%= User.human_attribute_name :description %></th>
+        <th style="width:30%;"><%= User.human_attribute_name :name %></th>
+        <th style="width:60%;"><%= User.human_attribute_name :description %></th>
         <th style="width:10%;"></th>
       </tr>
     </thead>
@@ -26,11 +26,13 @@
     <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td style="width:20%;">
-          <%= image_tag user.image.to_s, class: "img-fluid img-thumbnail rounded", :style => "max-width:100px;" %>
-          <%= link_to user.name, user, class: "text-reset font-weight-bold text-nowrap" %>
+        <td style="width:30%;">
+          <div class="row align-items-center p-1">
+            <%= image_tag user.image.to_s, class: "img-fluid img-thumbnail rounded m-1", :style => "max-width:100px;" %>
+            <%= link_to user.name, user, class: "text-reset font-weight-bold text-wrap m-1" %>
+          </div>
         </td>
-        <td style="width:70%;"><p class="d-inline-block text-truncate" style="max-width:540px"><%= user.description %></p></td>
+        <td style="width:60%;"><p class="d-inline-block text-truncate" style="max-width:540px"><%= user.description %></p></td>
         <td style="width:10%;">
           <% if current_user.admin? && !current_user?(user) %>
             <%= link_to "削除", user, method: :delete,
