--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -198,7 +198,7 @@
           <div class="collapse my-2" id="collapseExample">
             <div class="card card-body bg-dark">
               <%= form_with(url: user_path(@user), method: :get) do |fo| %>
-                <%= fo.hidden_field :tournaments, value: @user.id %>
+                <%= fo.hidden_field :tournaments, value: "tournaments_search" %>
                 <div class="m-auto row justify-content-between align-items-center col-lg">
                   <div class="col-lg-12">
                     <%= fo.label Tournament.human_attribute_name :name %>
