--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -246,11 +246,12 @@
             <table class="table table-hover text-nowrap table-responsive-md" id="table-users">
               <thead>
                 <tr>
-                  <th colspan="4"><%= Tournament.human_attribute_name :name %></th>
+                  <th colspan="3"><%= Tournament.human_attribute_name :name %></th>
                   <th colspan="2"><%= Tournament.human_attribute_name :game_title %></th>
                   <th colspan="4"><%= Tournament.human_attribute_name :master %></th>
                   <th colspan="1"><%= Tournament.human_attribute_name :start_time %></th>
                   <th colspan="1"><%= Tournament.human_attribute_name :status %></th>
+                  <th colspan="1"><%= "順位" %></th>
                 </tr>
               </thead>
               
