--- a/app/views/tournaments/index.html.erb
+++ b/app/views/tournaments/index.html.erb
@@ -14,9 +14,13 @@
       <%= form_with(url: tournaments_path, method: :get) do |fo| %>
         <%= fo.hidden_field :tournaments, value: "tournaments_search" %>
         <div class="m-auto row justify-content-between align-items-center col-lg">
+          <div class="col-12">
+            <%= fo.label Tournament.human_attribute_name :name %>
+            <%= fo.text_field :name, placeholder: "空白にすると全て検索します", class: "form-control" %>
+          </div>
           <div class="col-lg-6">
             <%= fo.label Tournament.human_attribute_name :game_title %>
-            <%= fo.select :game_title, Tournament.game_titles.keys.to_a, {include_blank: true}, class: "form-control" %>
+            <%= fo.select :game_title, Tournament.game_titles.keys.to_a, {prompt: "全タイトル"}, class: "form-control" %>
           </div>
           <div class="col-lg-4 col-sm-8">
             <%= fo.label Tournament.human_attribute_name :master %><br>
@@ -24,12 +28,12 @@
           </div>
           <div class="col-lg-2 col-sm-4">
             <%= fo.label Tournament.human_attribute_name :status %>
-            <%= fo.select :status, Tournament.statuses.keys.to_a, {include_blank: true}, class: "form-control" %>
+            <%= fo.select :status, Tournament.statuses.keys.to_a, {prompt: "全て"}, class: "form-control" %>
           </div>
           <div class="col-md-5">
             <%= fo.label "From"%>
             <div class="input-group" data-target-input="nearest">
-              <%= fo.text_field :from, id: "from_time_in", class: "form-control datepicker", data: {target: "#from_time_in"} %>
+              <%= fo.text_field :from, placeholder: "アイコンタッチで簡単入力", id: "from_time_in", class: "form-control datepicker", data: {target: "#from_time_in"} %>
               <div class="input-group-append" data-target="#from_time_in" data-toggle="datetimepicker">
                 <div class="input-group-text"><i class="fa fa-calendar"></i></div>
               </div>
@@ -39,7 +43,7 @@
           <div class="col-md-5">
             <%= fo.label "To" %>
             <div class="input-group" data-target-input="nearest">
-              <%= fo.text_field :to, id: "to_time_in", class: "form-control datepicker", data: {target: "#to_time_in"} %>
+              <%= fo.text_field :to, placeholder: "アイコンタッチで簡単入力", id: "to_time_in", class: "form-control datepicker", data: {target: "#to_time_in"} %>
               <div class="input-group-append" data-target="#to_time_in" data-toggle="datetimepicker">
                 <div class="input-group-text"><i class="fa fa-calendar"></i></div>
               </div>
