--- a/app/views/tournaments/show.html.erb
+++ b/app/views/tournaments/show.html.erb
@@ -19,11 +19,11 @@
                 </a>
               </h5>
             </div><!-- /.card-header -->
-            <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+            <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
                 <% if master?(@tournament) #開催者用追加フォーム %>
                   <%= form_with(model: @participant, url: tournament_participants_path(@tournament), method: :post) do |f| %>
-                    <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), multiple: true, class: "form-control searchable" %>
+                    <%= select_tag :players, options_from_collection_for_select(@not_yet_users, :id, :name), multiple: true, class: "form-control search_participants" %>
                     <%= f.submit "参加者追加", class: "btn btn-primary btn-block btn-login" %>
                   <% end %>
                 <% else #参加者用追加フォーム %>
@@ -53,7 +53,7 @@
                   <%= hidden_field_tag :tournament_id, @tournament.id %>
                   
                   <%= f.label "宛先" %>
-                  <%= select_tag :user_to, options_from_collection_for_select(return_users_from_participants(@participants), :id, :name), include_blank: true, multiple: true, class: "form-control searchable"%>
+                  <%= select_tag :user_to, options_from_collection_for_select(return_users_from_participants(@participants), :id, :name), include_blank: true, multiple: true, class: "form-control search_participants"%>
               
                   <%= f.label "本文" %>
                   <%= f.text_area :text, class: "form-control" %>
@@ -75,11 +75,12 @@
             <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
                 <div class="row justify-content-around">
-                    <%= link_to "大会を編集する", edit_tournament_path(@tournament, @challonge), class: "btn btn-lg btn-success" %>
                   <% unless @started %>
                     <%= link_to "参加者を全て取り消す", tournament_participants_clear_path(@tournament), method: :delete, data: { confirm: "取り消ししてよろしいですか？" }, class: "btn btn-lg btn-primary" %>
                     <%= link_to "参加者を並び替る", tournament_randomize_path(@tournament), data: { confirm: "並び替えてもいいですか？" }, class: "btn btn-lg btn-success" %>
-                    <%= link_to "大会を始める", tournament_start_path(@tournament), method: :get, data: { confirm: "大会を始めてもいいですか？" }, class: "btn btn-lg btn-success" %>
+                    <% if @participants.count >= 2 %>
+                      <%= link_to "大会を始める", tournament_start_path(@tournament), method: :get, data: { confirm: "大会を始めてもいいですか？" }, class: "btn btn-lg btn-success" %>
+                    <% end %>
                   <% else %>
                     <%= link_to "大会をやり直す", tournament_reset_path(@tournament), method: :get, data: { confirm: "大会をやり直してもいいですか？" }, class: "btn btn-lg btn-success" %>
                     <% if @challonge["tournament"]["state"] == "awaiting_review" %>
@@ -88,6 +89,20 @@
                   <% end %>
                   <%= link_to "大会を削除する", tournament_path, method: :delete, data: { confirm: "削除してよろしいですか？" }, class: "btn btn-lg btn-primary" %>
                 </div>
+              </div><!-- /.card-body -->
+            </div><!-- /.collapse -->
+          </div><!-- /.card -->
+          <div class="card">
+            <div class="card-header" role="tab" id="headingFour">
+              <h5 class="mb-0">
+                <a class="collapsed text-body" data-toggle="collapse" href="#collapseFour" role="button" aria-expanded="false" aria-controls="collapseFour">
+                  <button type="button" class="btn btn-primary">オプション</button>
+                </a>
+              </h5>
+            </div><!-- /.card-header -->
+            <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion">
+              <div class="card-body">
+                <%= render 'form' %>
               </div><!-- /.card-body -->
             </div><!-- /.collapse -->
           </div><!-- /.card -->
@@ -103,7 +118,7 @@
   <div class="container-fluid">
     <div class="row justify-content-start">
       <div class="col-lg-8 bg-light border">
-        <% if @participants.count > 1 %>
+        <% if @participants.count >= 2 %>
           <%= link_to image_tag(@challonge["tournament"]["live_image_url"], :width => "100%"), @challonge["tournament"]["full_challonge_url"], target: :_blank %>
         <% else %>
           <p class="text-dark">
@@ -184,13 +199,15 @@
                 <% end %>
               </div>
               <div class="col-5">
-                <% if master?(@tournament) %>
-                  <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
-                    <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
-                    <%= hidden_field_tag :user_to, participant.user_id %>
-                    
-                    <%= f.text_field :text, class: "form-control" %>
-                    <%= f.submit "送信", class: "btn btn-primary" %>
+                <% unless @challonge["tournament"]["state"] == "complete" %>
+                  <% if master?(@tournament) %>
+                    <%= form_with(model: @message, url: user_messages_path(current_user), local: true, method: :post) do |f| %>
+                      <%= f.hidden_field :user_id, value: master_tournament(@tournament).id %>
+                      <%= hidden_field_tag :user_to, participant.user_id %>
+                      
+                      <%= f.text_field :text, class: "form-control" %>
+                      <%= f.submit "送信", class: "btn btn-primary" %>
+                    <% end %>
                   <% end %>
                 <% end %>
               </div>
@@ -203,7 +220,11 @@
                   <% end %>
                 <% else %>
                   <p class="show-ranking font-weight-bold font-italic">
-                    <%= participant.ranking.ordinalize %>
+                    <% if rank = participant.ranking %>
+                      <%= rank.ordinalize %>
+                    <% else %>
+                      <%= @participants.count.ordinalize %>
+                    <% end %>
                   </p>
                 <% end %>
               </div>
@@ -224,7 +245,7 @@
 
 <script>
   $(document).ready(function() {
-    $('.searchable').val(<%= return_user_id_from_participant(@participants) %>);
-    $('.searchable').trigger('change');
+    $('.search_participants').val(<%= return_user_id_from_participant(@participants) %>);
+    $('.search_participants').trigger('change');
   });
 </script>
