--- a/app/views/users/_result_search.html.erb
+++ b/app/views/users/_result_search.html.erb
@@ -2,7 +2,7 @@
 <% @tournaments.each do |tournament| %>
   <% master = master_tournament(tournament) %>
   <tr>
-    <td colspan="4"><%= link_to tournament.name, tournament, class: "text-reset font-weight-bold" %></td>
+    <td colspan="3"><%= link_to tournament.name, tournament, class: "text-reset font-weight-bold" %></td>
     <td colspan="2" class="text-wrap text-break"><%= tournament.game_title %></td>
     <td colspan="4">
       <%= link_to image_tag(master.image.to_s, class: "img-fluid img-thumbnail rounded m-2", :style => "width:60px; height:60px;"), master %><br>
@@ -14,6 +14,19 @@
     </td>
     <td colspan="1"><%= l(tournament.start_time, format: :short) %></td>
     <td colspan="1"><%= tournament.status %></td>
+    <td colspan="1">
+      <p class="show-ranking font-weight-bold font-italic">
+        <% if !(participant = Participant.where(tournament_id: tournament.id).find_by(user_id: @user.id)).nil? %>
+          <% if rank = participant.ranking %>
+            <%= rank.ordinalize %>
+          <% else %>
+            <%= Participant.where(tournament_id: tournament.id).count.ordinalize %>
+          <% end %>
+        <% else %>
+          主催者
+        <% end %>
+      </p>
+    </td>
   </tr>
 <% end %>
 <tr><td colspan="12"><%= will_paginate @tournaments, {:param_name => 'tournaments', :class => 'pagination'} %></td></tr>
